[gd_scene load_steps=18 format=4 uid="uid://cwqd103ekb4ea"]

[ext_resource type="TileSet" uid="uid://df4me6nfd2i8j" path="res://assets/paint_tile_set.tres" id="1_t8kjd"]
[ext_resource type="Texture2D" uid="uid://g4ejllhmn1rg" path="res://assets/Paper-1200.png" id="2_4xj80"]
[ext_resource type="Script" path="res://scripts/mines_grid.gd" id="2_5iq3s"]
[ext_resource type="TileSet" uid="uid://bmuc7jsve5hnd" path="res://assets/watercolor_tile_set.tres" id="3_wr4yp"]
[ext_resource type="TileSet" uid="uid://biut5xhkrmola" path="res://assets/text_tile_set.tres" id="4_sru2c"]
[ext_resource type="Script" path="res://scripts/head_board.gd" id="4_tq5p3"]
[ext_resource type="TileSet" uid="uid://ce6j04ktfrqk8" path="res://assets/cells_tile_set.tres" id="5_2sqoq"]
[ext_resource type="TileSet" uid="uid://dkgeipf4vsqu3" path="res://assets/face_tile_set.tres" id="6_85uuk"]
[ext_resource type="PackedScene" uid="uid://c8kit824kr01c" path="res://game_state_manager.tscn" id="8_44vgd"]
[ext_resource type="PackedScene" uid="uid://bbaaivv1bkgob" path="res://assembled-assets/flag_cell.tscn" id="8_yrtve"]
[ext_resource type="PackedScene" uid="uid://bxfrrroa4333t" path="res://assembled-assets/flag_false_cell.tscn" id="9_ckkff"]
[ext_resource type="PackedScene" uid="uid://cw4jjuspdigkf" path="res://assembled-assets/mine_cell.tscn" id="10_iixqv"]
[ext_resource type="PackedScene" uid="uid://nq5x1hnrkeai" path="res://assembled-assets/mine_red_cell.tscn" id="11_i50rf"]
[ext_resource type="PackedScene" uid="uid://c55is855h3xkq" path="res://assembled-assets/cursor_manager.tscn" id="14_peaoe"]

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_67ex4"]
scenes/1/scene = ExtResource("10_iixqv")
scenes/2/scene = ExtResource("11_i50rf")

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_u5cgg"]
scenes/1/scene = ExtResource("8_yrtve")
scenes/2/scene = ExtResource("9_ckkff")

[sub_resource type="TileSet" id="TileSet_vhyol"]
tile_size = Vector2i(100, 100)
sources/0 = SubResource("TileSetScenesCollectionSource_67ex4")
sources/1 = SubResource("TileSetScenesCollectionSource_u5cgg")

[node name="Main" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_4xj80")

[node name="UnderBoard" type="Node2D" parent="."]
position = Vector2(-550, -550)

[node name="ShadowLayer" type="TileMapLayer" parent="UnderBoard"]
position = Vector2(550, 550)
tile_map_data = PackedByteArray("AAD7/wUAAAAAAAAAAAD8/wUAAAABAAAAAAD9/wUAAAACAAAAAAD+/wUAAAAAAAAAAAD//wUAAAACAAAAAAAAAAUAAAAAAAQAAAABAAUAAAACAAQAAAACAAUAAAAAAAAAAAADAAUAAAACAAMAAAAEAAUAAAABAAMAAAAFAPr/AAACAAAAAAAFAPv/AAAAAAAAAAAFAPz/AAABAAQAAAAFAP3/AAAAAAQAAAAFAP7/AAABAAQAAAAFAP//AAABAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAACAAQAAAAFAAIAAAACAAAAAAAFAAMAAAABAAAAAAAFAAQAAAACAAAAAAAFAAUAAAACAAAAAAA=")
tile_set = ExtResource("3_wr4yp")

[node name="Board" type="Node2D" parent="."]
position = Vector2(-550, -550)
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="BGLayer" type="TileMapLayer" parent="Board"]
tile_map_data = PackedByteArray("AAAAAAAAAQAAAAYAAAAAAAEAAQAAAAYAAAAAAAIAAQABAAYAAAAAAAMAAQABAAYAAAAAAAQAAQAAAAYAAAAAAAUAAQABAAYAAAABAAAAAQAAAAYAAAABAAEAAQAAAAYAAAABAAIAAQAAAAYAAAABAAMAAQABAAYAAAABAAQAAQABAAYAAAABAAUAAQAAAAYAAAACAAAAAQABAAYAAAACAAEAAQABAAYAAAACAAIAAQABAAYAAAACAAMAAQAAAAYAAAACAAQAAQABAAYAAAACAAUAAQAAAAYAAAADAAAAAQAAAAYAAAADAAEAAQAAAAYAAAADAAIAAQAAAAYAAAADAAMAAQAAAAYAAAADAAQAAQAAAAYAAAADAAUAAQABAAYAAAAEAAAAAQAAAAYAAAAEAAEAAQABAAYAAAAEAAIAAQABAAYAAAAEAAMAAQABAAYAAAAEAAQAAQABAAYAAAAEAAUAAQAAAAYAAAAFAAAAAQABAAYAAAAFAAEAAQAAAAYAAAAFAAIAAQABAAYAAAAFAAMAAQABAAYAAAAFAAQAAQABAAYAAAAFAAUAAQAAAAYAAAAAAAYAAQAAAAYAAAAAAAcAAQAAAAYAAAAAAAgAAQABAAYAAAAAAAkAAQAAAAYAAAAAAAoAAQAAAAYAAAABAAYAAQAAAAYAAAABAAcAAQABAAYAAAABAAgAAQAAAAYAAAABAAkAAQAAAAYAAAABAAoAAQAAAAYAAAACAAYAAQABAAYAAAACAAcAAQAAAAYAAAACAAgAAQAAAAYAAAACAAkAAQABAAYAAAACAAoAAQAAAAYAAAADAAYAAQABAAYAAAADAAcAAQAAAAYAAAADAAgAAQABAAYAAAADAAkAAQAAAAYAAAADAAoAAQAAAAYAAAAEAAYAAQABAAYAAAAEAAcAAQAAAAYAAAAEAAgAAQAAAAYAAAAEAAkAAQAAAAYAAAAEAAoAAQAAAAYAAAAFAAYAAQABAAYAAAAFAAcAAQAAAAYAAAAFAAgAAQABAAYAAAAFAAkAAQABAAYAAAAFAAoAAQABAAYAAAAGAAAAAQAAAAYAAAAGAAEAAQAAAAYAAAAGAAIAAQABAAYAAAAGAAMAAQABAAYAAAAGAAQAAQABAAYAAAAGAAUAAQABAAYAAAAGAAYAAQAAAAYAAAAGAAcAAQABAAYAAAAGAAgAAQAAAAYAAAAGAAkAAQAAAAYAAAAGAAoAAQAAAAYAAAAHAAAAAQABAAYAAAAHAAEAAQABAAYAAAAHAAIAAQAAAAYAAAAHAAMAAQAAAAYAAAAHAAQAAQABAAYAAAAHAAUAAQAAAAYAAAAHAAYAAQABAAYAAAAHAAcAAQABAAYAAAAHAAgAAQABAAYAAAAHAAkAAQABAAYAAAAHAAoAAQAAAAYAAAAIAAAAAQABAAYAAAAIAAEAAQABAAYAAAAIAAIAAQABAAYAAAAIAAMAAQABAAYAAAAIAAQAAQAAAAYAAAAIAAUAAQABAAYAAAAIAAYAAQAAAAYAAAAIAAcAAQABAAYAAAAIAAgAAQABAAYAAAAIAAkAAQABAAYAAAAIAAoAAQAAAAYAAAAJAAAAAQABAAYAAAAJAAEAAQAAAAYAAAAJAAIAAQAAAAYAAAAJAAMAAQABAAYAAAAJAAQAAQABAAYAAAAJAAUAAQABAAYAAAAJAAYAAQABAAYAAAAJAAcAAQABAAYAAAAJAAgAAQABAAYAAAAJAAkAAQAAAAYAAAAJAAoAAQABAAYAAAAKAAAAAQABAAYAAAAKAAEAAQAAAAYAAAAKAAIAAQAAAAYAAAAKAAMAAQAAAAYAAAAKAAQAAQAAAAYAAAAKAAUAAQABAAYAAAAKAAYAAQABAAYAAAAKAAcAAQABAAYAAAAKAAgAAQABAAYAAAAKAAkAAQABAAYAAAAKAAoAAQAAAAYAAAA=")
tile_set = ExtResource("1_t8kjd")

[node name="VerticalLineBGLayer" type="TileMapLayer" parent="Board"]
position = Vector2(50, 0)
tile_map_data = PackedByteArray("AAAAAAAAAQAKACMAAAAAAAEAAQAKACMAAAAAAAIAAQAKACMAAAAAAAMAAQAKACMAAAAAAAQAAQAKACMAAAAAAAUAAQAKACMAAAABAAAAAQAKACMAAAABAAEAAQAKACMAAAABAAIAAQAKACMAAAABAAMAAQAKACMAAAABAAQAAQAKACMAAAABAAUAAQAKACMAAAACAAAAAQAKACMAAAACAAEAAQAKACMAAAACAAIAAQAKACMAAAACAAMAAQAKACMAAAACAAQAAQAKACMAAAACAAUAAQAKACMAAAADAAAAAQAKACMAAAADAAEAAQAKACMAAAADAAIAAQAKACMAAAADAAMAAQAKACMAAAADAAQAAQAKACMAAAADAAUAAQAKACMAAAAEAAAAAQAKACMAAAAEAAEAAQAKACMAAAAEAAIAAQAKACMAAAAEAAMAAQAKACMAAAAEAAQAAQAKACMAAAAEAAUAAQAKACMAAAAFAAAAAQAKACMAAAAFAAEAAQAKACMAAAAFAAIAAQAKACMAAAAFAAMAAQAKACMAAAAFAAQAAQAKACMAAAAFAAUAAQAKACMAAAAAAAYAAQAKACMAAAAAAAcAAQAKACMAAAAAAAgAAQAKACMAAAAAAAkAAQAKACMAAAAAAAoAAQAKACMAAAABAAYAAQAKACMAAAABAAcAAQAKACMAAAABAAgAAQAKACMAAAABAAkAAQAKACMAAAABAAoAAQAKACMAAAACAAYAAQAKACMAAAACAAcAAQAKACMAAAACAAgAAQAKACMAAAACAAkAAQAKACMAAAACAAoAAQAKACMAAAADAAYAAQAKACMAAAADAAcAAQAKACMAAAADAAgAAQAKACMAAAADAAkAAQAKACMAAAADAAoAAQAKACMAAAAEAAYAAQAKACMAAAAEAAcAAQAKACMAAAAEAAgAAQAKACMAAAAEAAkAAQAKACMAAAAEAAoAAQAKACMAAAAFAAYAAQAKACMAAAAFAAcAAQAKACMAAAAFAAgAAQAKACMAAAAFAAkAAQAKACMAAAAFAAoAAQAKACMAAAAGAAAAAQAKACMAAAAGAAEAAQAKACMAAAAGAAIAAQAKACMAAAAGAAMAAQAKACMAAAAGAAQAAQAKACMAAAAGAAUAAQAKACMAAAAGAAYAAQAKACMAAAAGAAcAAQAKACMAAAAGAAgAAQAKACMAAAAGAAkAAQAKACMAAAAGAAoAAQAKACMAAAAHAAAAAQAKACMAAAAHAAEAAQAKACMAAAAHAAIAAQAKACMAAAAHAAMAAQAKACMAAAAHAAQAAQAKACMAAAAHAAUAAQAKACMAAAAHAAYAAQAKACMAAAAHAAcAAQAKACMAAAAHAAgAAQAKACMAAAAHAAkAAQAKACMAAAAHAAoAAQAKACMAAAAIAAAAAQAKACMAAAAIAAEAAQAKACMAAAAIAAIAAQAKACMAAAAIAAMAAQAKACMAAAAIAAQAAQAKACMAAAAIAAUAAQAKACMAAAAIAAYAAQAKACMAAAAIAAcAAQAKACMAAAAIAAgAAQAKACMAAAAIAAkAAQAKACMAAAAIAAoAAQAKACMAAAAJAAAAAQAKACMAAAAJAAEAAQAKACMAAAAJAAIAAQAKACMAAAAJAAMAAQAKACMAAAAJAAQAAQAKACMAAAAJAAUAAQAKACMAAAAJAAYAAQAKACMAAAAJAAcAAQAKACMAAAAJAAgAAQAKACMAAAAJAAkAAQAKACMAAAAJAAoAAQAKACMAAAAKAAAAAQAKACMAAAAKAAEAAQAKACMAAAAKAAIAAQAKACMAAAAKAAMAAQAKACMAAAAKAAQAAQAKACMAAAAKAAUAAQAKACMAAAAKAAYAAQAKACMAAAAKAAcAAQAKACMAAAAKAAgAAQAKACMAAAAKAAkAAQAKACMAAAAKAAoAAQAKACMAAAA=")
tile_set = ExtResource("1_t8kjd")

[node name="HorizontalLineBGLayer" type="TileMapLayer" parent="Board"]
position = Vector2(0, 50)
tile_map_data = PackedByteArray("AAAAAAAAAQALACMAAAAAAAEAAQALACMAAAAAAAIAAQALACMAAAAAAAMAAQALACMAAAAAAAQAAQALACMAAAAAAAUAAQALACMAAAABAAAAAQALACMAAAABAAEAAQALACMAAAABAAIAAQALACMAAAABAAMAAQALACMAAAABAAQAAQALACMAAAABAAUAAQALACMAAAACAAAAAQALACMAAAACAAEAAQALACMAAAACAAIAAQALACMAAAACAAMAAQALACMAAAACAAQAAQALACMAAAACAAUAAQALACMAAAADAAAAAQALACMAAAADAAEAAQALACMAAAADAAIAAQALACMAAAADAAMAAQALACMAAAADAAQAAQALACMAAAADAAUAAQALACMAAAAEAAAAAQALACMAAAAEAAEAAQALACMAAAAEAAIAAQALACMAAAAEAAMAAQALACMAAAAEAAQAAQALACMAAAAEAAUAAQALACMAAAAFAAAAAQALACMAAAAFAAEAAQALACMAAAAFAAIAAQALACMAAAAFAAMAAQALACMAAAAFAAQAAQALACMAAAAFAAUAAQALACMAAAAAAAYAAQALACMAAAAAAAcAAQALACMAAAAAAAgAAQALACMAAAAAAAkAAQALACMAAAAAAAoAAQALACMAAAABAAYAAQALACMAAAABAAcAAQALACMAAAABAAgAAQALACMAAAABAAkAAQALACMAAAABAAoAAQALACMAAAACAAYAAQALACMAAAACAAcAAQALACMAAAACAAgAAQALACMAAAACAAkAAQALACMAAAACAAoAAQALACMAAAADAAYAAQALACMAAAADAAcAAQALACMAAAADAAgAAQALACMAAAADAAkAAQALACMAAAADAAoAAQALACMAAAAEAAYAAQALACMAAAAEAAcAAQALACMAAAAEAAgAAQALACMAAAAEAAkAAQALACMAAAAEAAoAAQALACMAAAAFAAYAAQALACMAAAAFAAcAAQALACMAAAAFAAgAAQALACMAAAAFAAkAAQALACMAAAAFAAoAAQALACMAAAAGAAAAAQALACMAAAAGAAEAAQALACMAAAAGAAIAAQALACMAAAAGAAMAAQALACMAAAAGAAQAAQALACMAAAAGAAUAAQALACMAAAAGAAYAAQALACMAAAAGAAcAAQALACMAAAAGAAgAAQALACMAAAAGAAkAAQALACMAAAAGAAoAAQALACMAAAAHAAAAAQALACMAAAAHAAEAAQALACMAAAAHAAIAAQALACMAAAAHAAMAAQALACMAAAAHAAQAAQALACMAAAAHAAUAAQALACMAAAAHAAYAAQALACMAAAAHAAcAAQALACMAAAAHAAgAAQALACMAAAAHAAkAAQALACMAAAAHAAoAAQALACMAAAAIAAAAAQALACMAAAAIAAEAAQALACMAAAAIAAIAAQALACMAAAAIAAMAAQALACMAAAAIAAQAAQALACMAAAAIAAUAAQALACMAAAAIAAYAAQALACMAAAAIAAcAAQALACMAAAAIAAgAAQALACMAAAAIAAkAAQALACMAAAAIAAoAAQALACMAAAAJAAAAAQALACMAAAAJAAEAAQALACMAAAAJAAIAAQALACMAAAAJAAMAAQALACMAAAAJAAQAAQALACMAAAAJAAUAAQALACMAAAAJAAYAAQALACMAAAAJAAcAAQALACMAAAAJAAgAAQALACMAAAAJAAkAAQALACMAAAAJAAoAAQALACMAAAAKAAAAAQALACMAAAAKAAEAAQALACMAAAAKAAIAAQALACMAAAAKAAMAAQALACMAAAAKAAQAAQALACMAAAAKAAUAAQALACMAAAAKAAYAAQALACMAAAAKAAcAAQALACMAAAAKAAgAAQALACMAAAAKAAkAAQALACMAAAAKAAoAAQALACMAAAA=")
tile_set = ExtResource("1_t8kjd")

[node name="HeadBoard" type="Node2D" parent="."]
position = Vector2(-550, -650)
script = ExtResource("4_tq5p3")

[node name="BG" type="Node2D" parent="HeadBoard"]
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="BackgroundLayer" type="TileMapLayer" parent="HeadBoard/BG"]
tile_map_data = PackedByteArray("AAAAAAAAAQABAA0AAAABAAAAAQABAA0AAAACAAAAAQABAA0AAAADAAAAAQABAA0AAAAEAAAAAQABAA0AAAAFAAAAAQABAA0AAAAGAAAAAQAAAA0AAAAHAAAAAQABAA0AAAAIAAAAAQAAAA0AAAAJAAAAAQABAA0AAAAKAAAAAQABAA0AAAA=")
tile_set = ExtResource("1_t8kjd")

[node name="BackgroundDecorLayor" type="TileMapLayer" parent="HeadBoard/BG"]
modulate = Color(1, 1, 1, 0.498039)
tile_map_data = PackedByteArray("AAAAAAAAAQAkAAgAAAABAAAAAQAkAAgAAAACAAAAAQAkAAgAAAADAAAAAQAkAAgAAAAEAAAAAQAkAAgAAAAFAAAAAQAkAAgAAAAGAAAAAQAkAAgAAAAHAAAAAQAkAAgAAAAIAAAAAQAkAAgAAAAJAAAAAQAkAAgAAAAKAAAAAQAkAAgAAAA=")
tile_set = ExtResource("1_t8kjd")

[node name="BackgroundDecorLayor2" type="TileMapLayer" parent="HeadBoard/BG"]
tile_map_data = PackedByteArray("AAAAAAAAAQAuAA0AAAABAAAAAQAuAA0AAAACAAAAAQAuAA0AAAADAAAAAQAkAAgAAAAEAAAAAQAsAA0AAAAFAAAAAQAsAA0AAAAGAAAAAQAsAA0AAAAHAAAAAQAkAAgAAAAIAAAAAQAoAA0AAAAJAAAAAQAoAA0AAAAKAAAAAQAoAA0AAAA=")
tile_set = ExtResource("1_t8kjd")

[node name="VerticalLineBGLayer" type="TileMapLayer" parent="HeadBoard/BG"]
position = Vector2(50, 0)
tile_map_data = PackedByteArray("AAD//wAAAQAKAC8AAAAKAAAAAQAKACEAAAA=")
tile_set = ExtResource("1_t8kjd")

[node name="HorizontalLineBGLayer" type="TileMapLayer" parent="HeadBoard/BG"]
position = Vector2(0, 50)
tile_map_data = PackedByteArray("AAAAAP//AQALAC8AAAABAP//AQALAC8AAAACAP//AQALAC8AAAADAP//AQALAC8AAAAEAP//AQALAC8AAAAFAP//AQALAC8AAAAGAP//AQALAC8AAAAHAP//AQALAC8AAAAIAP//AQALAC8AAAAJAP//AQALAC8AAAAKAP//AQALAC8AAAAKAAAAAQALAC0AAAAJAAAAAQALAC0AAAAIAAAAAQALAC0AAAAHAAAAAQALAC0AAAAGAAAAAQALAC0AAAAFAAAAAQALAC0AAAAEAAAAAQALAC0AAAADAAAAAQALAC0AAAACAAAAAQALAC0AAAABAAAAAQALAC0AAAAAAAAAAQALAC0AAAA=")
tile_set = ExtResource("1_t8kjd")

[node name="DecorationLayer" type="TileMapLayer" parent="HeadBoard/BG"]
tile_map_data = PackedByteArray("AAADAAAAAQAkAAcAAAAHAAAAAQAkAAcAAAA=")
tile_set = ExtResource("1_t8kjd")

[node name="OffsetDecorationLayer" type="TileMapLayer" parent="HeadBoard/BG"]
position = Vector2(50, 0)
tile_map_data = PackedByteArray("AAADAAAAAQAmAAcAAAAGAAAAAQAmAAcAAAA=")
tile_set = ExtResource("1_t8kjd")

[node name="TimeTextLayer" type="TileMapLayer" parent="HeadBoard"]
position = Vector2(800, 0)
tile_map_data = PackedByteArray("AAAAAAAAAAAKAAEAAAACAAAAAAAKAAEAAAABAAAAAAAKAAEAAAA=")
tile_set = ExtResource("4_sru2c")

[node name="FlagCountTextLayer" type="TileMapLayer" parent="HeadBoard"]
tile_map_data = PackedByteArray("AAAAAAAAAAAKAAEAAAACAAAAAAAKAAEAAAABAAAAAAAKAAEAAAA=")
tile_set = ExtResource("4_sru2c")

[node name="FaceButtonLayer" type="TileMapLayer" parent="HeadBoard"]
z_index = 1
position = Vector2(500, 0)
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAgA=")
tile_set = ExtResource("6_85uuk")

[node name="CenterContainer" type="CenterContainer" parent="HeadBoard"]
offset_right = 1100.0
offset_bottom = 100.0

[node name="FaceButton" type="Button" parent="HeadBoard/CenterContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(110, 100)
layout_mode = 2

[node name="GameBoard" type="Node2D" parent="."]
position = Vector2(-550, -550)
script = ExtResource("2_5iq3s")

[node name="Cells" type="TileMapLayer" parent="GameBoard"]
tile_map_data = PackedByteArray("AAABAAcAAAAAAAAAAQABAAYAAAAAAAAAAQABAAUAAAAAAAAAAQACAAUAAAAAAAAAAQAAAAAAAAAAAAAAAQABAAAAAAAAAAAAAQACAAAAAAAAAAAAAQADAAAAAAAAAAAAAQAEAAAAAAAAAAAAAQAFAAAAAAAAAAAAAQAGAAAAAAAAAAAAAQAHAAAAAAAAAAAAAQAIAAAAAAAAAAAAAQAJAAAAAAAAAAAAAQAKAAAAAAAAAAAAAQAAAAEAAAAAAAAAAQABAAEAAAAAAAAAAQACAAEAAAAAAAAAAQADAAEAAAAAAAAAAQAEAAEAAAAAAAAAAQAFAAEAAAAAAAAAAQAGAAEAAAAAAAAAAQAHAAEAAAAAAAAAAQAIAAEAAAAAAAAAAQAJAAEAAAAAAAAAAQAKAAEAAAAAAAAAAQAKAAIAAAAAAAAAAQAJAAIAAAAAAAAAAQAIAAIAAAAAAAAAAQAHAAIAAAAAAAAAAQAGAAIAAAAAAAAAAQAFAAIAAAAAAAAAAQAEAAIAAAAAAAAAAQADAAIAAAAAAAAAAQACAAIAAAAAAAAAAQABAAIAAAAAAAAAAQAAAAIAAAAAAAAAAQAAAAMAAAAAAAAAAQAAAAQAAAAAAAAAAQABAAMAAAAAAAAAAQABAAQAAAAAAAAAAQACAAQAAAAAAAAAAQACAAMAAAAAAAAAAQADAAMAAAAAAAAAAQAEAAMAAAAAAAAAAQAGAAMAAAAAAAAAAQAFAAMAAAAAAAAAAQAHAAMAAAAAAAAAAQAIAAMAAAAAAAAAAQAHAAQAAAAAAAAAAQAGAAQAAAAAAAAAAQAFAAQAAAAAAAAAAQAEAAcAAgAmAAAAAAAFAAcAAgAnAAAAAAAEAAYAAgAlAAAAAAADAAcAAgAmAAAAAAAGAAYAAgAkAAAAAAAFAAYAAgAlAAAAAAAHAAYAAgAmAAAAAAAIAAYAAgAlAAAAAAAJAAYAAgAlAAAAAAAJAAUAAgAnAAAAAAAKAAUAAgAlAAAAAAAKAAQAAgAkAAAAAAAKAAYAAgAmAAAAAAAKAAcAAgAmAAAAAAAKAAgAAgAnAAAAAAAKAAkAAgAmAAAAAAAKAAoAAgAnAAAAAAAJAAoAAgAmAAAAAAAJAAkAAgAmAAAAAAAIAAgAAgAkAAAAAAAIAAcAAgAnAAAAAAAJAAcAAgAlAAAAAAAJAAgAAgAlAAAAAAAIAAkAAgAmAAAAAAAIAAoAAgAlAAAAAAAHAAoAAgAkAAAAAAAHAAkAAgAmAAAAAAAHAAgAAgAnAAAAAAAHAAcAAgAmAAAAAAAGAAcAAgAmAAAAAAAGAAgAAgAnAAAAAAAGAAkAAgAnAAAAAAAGAAoAAgAlAAAAAAAFAAoAAgAmAAAAAAAFAAkAAgAnAAAAAAAFAAgAAgAnAAAAAAAEAAgAAgAnAAAAAAAEAAkAAgAmAAAAAAAEAAoAAgAkAAAAAAADAAoAAgAlAAAAAAADAAkAAgAlAAAAAAADAAgAAgAlAAAAAAACAAoAAgAlAAAAAAACAAkAAgAnAAAAAAABAAkAAgAmAAAAAAAAAAkAAgAmAAAAAAAAAAoAAgAkAAAAAAABAAoAAgAlAAAAAAAAAAUAAwAAAAAAAQABAAgAAwAAAAAAAQAAAAgAAwAAAAAAAQAAAAcAAwAAAAAAAQACAAgAAwAAAAAAAQACAAcAAwAAAAAAAQAFAAUAAwAAAAAAAgAEAAUAAwAAAAAAAgADAAQAAwAAAAAAAwAHAAUAAwAAAAAABAAJAAQAAwAAAAAABgAIAAQAAwAAAAAABgAGAAUAAwAAAAAABQACAAYAAwAAAAAABwAJAAMAAwAAAAAACAA=")
tile_set = ExtResource("5_2sqoq")

[node name="HorizontalLinesLayer" type="TileMapLayer" parent="GameBoard"]
position = Vector2(0, -50)
tile_set = ExtResource("1_t8kjd")

[node name="VerticalLinesLayer" type="TileMapLayer" parent="GameBoard"]
position = Vector2(-50, 0)
tile_set = ExtResource("1_t8kjd")

[node name="TopLayer" type="TileMapLayer" parent="GameBoard"]
tile_set = SubResource("TileSet_vhyol")

[node name="GameStateManager" parent="." node_paths=PackedStringArray("mines_grid", "head_board") instance=ExtResource("8_44vgd")]
mines_grid = NodePath("../GameBoard")
head_board = NodePath("../HeadBoard")

[node name="CursorManager" parent="." instance=ExtResource("14_peaoe")]
